# midir

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  azure-pipelines-template.yml  azure-pipelines.yml  build.rs
.github/workflows/: ci.yml
examples/: test.rs  test_alsa.rs  test_forward.rs  test_input.rs  test_input_win.rs  test_list_ports.rs  test_output.rs  test_play.rs  test_read_input.rs  test_reuse.rs  test_sysex.rs  test_virtual.rs  test_win.rs
examples/browser/: Cargo.toml  README.md  index.html
examples/browser/play_async/: Cargo.toml  index.html
examples/browser/play_async/src/: lib.rs
examples/browser/read_input_async/: Cargo.toml  index.html
examples/browser/read_input_async/src/: lib.rs
examples/browser/read_input_sync/: Cargo.toml  index.html
examples/browser/src/: lib.rs
src/: common.rs  errors.rs  ext.rs  lib.rs  traits.rs  virtual.rs
src/alsa/: mod.rs  wrappers.rs
src/backend/: mod.rs
src/backend/alsa/: mod.rs  wrappers.rs
src/backend/android/: mod.rs
src/backend/coremidi/: mod.rs
src/backend/jack/: mod.rs  wrappers.rs
src/backend/webmidi/: mod.rs
src/backend/winmm/: handler.rs  mod.rs
src/backend/winrt/: mod.rs
src/jack/: mod.rs  wrappers.rs
src/os/: mod.rs  nix.rs  unix.rs
src/winmm/: handler.rs  mod.rs
tests/: virtual.rs
